# data_pipeline_python

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
src/gcp_sales_pipeline/: __init__.py  bq_client.py  cli.py  exceptions.py  filters.py  gcs_client.py  pipeline.py
tests/integration/: test_pipeline_integration.py
tests/unit/: test_filters.py
